--- a/modules/party_cog/view/address_tree_sequence.xml
+++ b/modules/party_cog/view/address_tree_sequence.xml
@@ -8,10 +8,10 @@
         <field name="end_date"/>
     </xpath>
     <xpath expr="/tree/field[@name='zip']" position="replace_attributes">
-        <field tree_invisible="1"/>
+        <field name="zip" tree_invisible="1"/>
     </xpath>
     <xpath expr="/tree/field[@name='city']" position="replace_attributes">
-        <field tree_invisible="1"/>
+        <field name="city" tree_invisible="1"/>
     </xpath>
     <xpath expr="/tree/field[@name='streetbis']" position="after">
         <field name="zip_and_city"/>
