Set iban as full size in account number

--- a/modules/bank_cog/view/bank_account_number_list_sequence.xml
+++ b/modules/bank_cog/view/bank_account_number_list_sequence.xml
@@ -3,4 +3,7 @@
     <xpath expr="/tree" position="replace_attributes">
         <tree editable="bottom"/>
     </xpath>
+    <xpath expr="/tree/field[@name='number']" position="replace_attributes">
+        <field name="number" expand="1"/>
+    </xpath>
 </data>
