--- a/modules/contract_insurance_invoice_dunning/view/dunning_level_list.xml
+++ b/modules/contract_insurance_invoice_dunning/view/dunning_level_list.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0"?>
 <data>
     <xpath expr="/tree/field[@name='not_mandatory']" position="after">
+        <field name="skip_level_for_payment"/>
         <field name="contract_action"/>
     </xpath>
 </data>
