--- a/modules/contract_insurance_invoice/view/invoice_line_list_sequence.xml
+++ b/modules/contract_insurance_invoice/view/invoice_line_list_sequence.xml
@@ -3,6 +3,9 @@
     <xpath expr="/tree/field[@name='type']" position="after">
         <field name="coverage_start"/>
         <field name="coverage_end"/>
+        <field name="covered_element"/>
+        <field name="type_"/>
+        <field name="loan"/>
         <field name="amount">
             <suffix name="currency_symbol"/>
         </field>
